fix nav spacing

--- a/src/resources/postcss/components/_navigation.pcss
+++ b/src/resources/postcss/components/_navigation.pcss
@@ -24,7 +24,11 @@
 	 */
 	.tribe-common-c-nav {
 		border-top: 1px solid var(--color-border-default);
-		padding-top: var(--spacer-6);
+		padding-top: var(--spacer-4);
+
+		@media (--viewport-medium) {
+			padding-top: var(--spacer-6);
+		}
 	}
 
 	.tribe-common-c-nav__list {
